# CZF-breakthrough

./: .clang-tidy  .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  README.md  config.example.yaml  rebuild.sh  setup.py
.github/workflows/: docs.yml
cmake/: FindSphinx.cmake
config/alphazero/: breakthrough.yaml  gomoku.yaml  tic_tac_toe.yaml
config/muzero/: 2048.yaml  2048_gumbel.yaml  breakout.yaml  gomoku.yaml  tic_tac_toe.yaml  tic_tac_toe_gumbel.yaml
config/muzero_gumbel/: tic_tac_toe.yaml
czf/: CMakeLists.txt  __init__.py
czf/actor/: CMakeLists.txt  __init__.py  __main__.py  actor.py  dummy_agent.cc  dummy_agent.py  module.cc
czf/actor/alphazero_worker/: CMakeLists.txt  config.h  job.cc  job.h  job_expand.cc  model_manager.cc  model_manager.h  module.cc  node.cc  node.h  tree.cc  tree.h  worker_manager.cc  worker_manager.h
czf/actor/gumbel_muzero_worker/: CMakeLists.txt  module.cc
czf/actor/gumbel_muzero_worker/mcts/: mcts.cc  mcts.h
czf/actor/gumbel_muzero_worker/utils/: config.h
czf/actor/gumbel_muzero_worker/worker/: job.h  model_manager.cc  model_manager.h  worker_manager.cc  worker_manager.h
czf/actor/mcts/: mcts.cc  mcts.h  mcts.hpp
czf/actor/muzero_worker/: CMakeLists.txt  module.cc
czf/actor/muzero_worker/mcts/: mcts.cc  mcts.h
czf/actor/muzero_worker/utils/: config.h
czf/actor/muzero_worker/worker/: job.h  model_manager.cc  model_manager.h  worker_manager.cc  worker_manager.h
czf/actor/muzero_worker_gumbel/: CMakeLists.txt  module.cc
czf/actor/muzero_worker_gumbel/mcts/: mcts.cc  mcts.h
czf/actor/muzero_worker_gumbel/utils/: config.h
czf/actor/muzero_worker_gumbel/worker/: job.h  model_manager.cc  model_manager.h  worker_manager.cc  worker_manager.h
czf/actor/utils/: config.h  model.cc  model.h  model.hpp  random.h  random.hpp
czf/actor/worker/: CMakeLists.txt  job.h  model.cc  model.h  worker.cc  worker.h  worker.hpp  worker_cpu.cc  worker_gpu.cc
czf/broker/: __init__.py  __main__.py  broker.py  named_broker.py
czf/cli_agent/: __init__.py  __main__.py  cli_agent.py
czf/env/: CMakeLists.txt
czf/env/atari_env/: __init__.py  game.py
czf/env/czf_env/: CMakeLists.txt  game.cc  game.h  module.cc
czf/env/czf_env/breakthrough/: breakthrough.cc  breakthrough.h
czf/env/czf_env/cxx2048/: board.h  cxx2048.cc  cxx2048.h
czf/env/czf_env/gomoku/: gomoku.cc  gomoku.h
czf/env/czf_env/surakarta/: surakarta.cc  surakarta.h
czf/env/czf_env/surakarta_SplitAction/: surakarta_SplitAction.cc  surakarta_SplitAction.h
czf/env/czf_env/surakarta_split_action/: surakarta_split_action.cc  surakarta_split_action.h
czf/env/czf_env/tic_tac_toe/: tic_tac_toe.cc  tic_tac_toe.h
czf/game_server/: __init__.py  __main__.py  env_manager.py  evaluator.py  game_server.py
czf/game_server/atari_env/: __init__.py  game.py
czf/learner/: __init__.py  __main__.py  data_parallel.py  dataloader.py  distributed.py  learner.py  trainer.py
czf/learner/alphazero_learner/: learner.py
czf/learner/muzero_learner/: dataloader.py  learner.py  preprocessor.py  replay_buffer.py  trainer.py
czf/learner/nn/: __init__.py  alphazero.py  muzero.py  muzero_atari.py  resnet.py  se_resnet.py  stochastic_muzero.py
czf/learner/preprocessor/: alphazero_preprocessor.py  muzero_preprocessor.py  preprocessor.py
czf/learner/replay_buffer/: alphazero_replay_buffer.py  muzero_replay_buffer.py  replay_buffer.py
czf/learner/trainer/: alphazero_trainer.py  muzero_trainer.py  stochastic_muzero_trainer.py  trainer.py
czf/model_provider/: __init__.py  __main__.py  model_manager.py  model_provider.py
czf/optimizer/: __init__.py  __main__.py  dataloader.py  optimizer.py  trainer.py
czf/optimizer/nn/: __init__.py  alphazero.py  muzero.py  resnet.py
czf/pb/: czf.pb.h  czf_pb2.py
czf/preprocessor/: preprocessor.py
czf/proto/: czf.proto
czf/utils/: __init__.py  lru_cache.py  model.py  model_saver.py  queue.py  socket.py  utils.py
docs/: CMakeLists.txt  conf.py  cpp.rst  index.rst  python.rst
docs/cpp/: actor.rst  mcts.rst  worker.rst
docs/python/: actor.rst  broker.rst  game_server.rst  learner.rst  model_provider.rst
podman/: Dockerfile.devel  Dockerfile.runtime
samples/: breakout.yaml  gomoku.yaml  tic_tac_toe.yaml
src/: CMakeLists.txt  czf.cc  czf.h  czf.pb.cc  czf.pb.h
src/games/: CMakeLists.txt  tic_tac_toe.cc  tic_tac_toe.h
src/python/: CMakeLists.txt  broker.py  constants.py  czf_pb2.py  dummy_agent.py  preprocessor.py  pyczf.cc  self_player.py
tests/: CMakeLists.txt
tests/env/czf_env/: CMakeLists.txt  test_czf_env.py
tests/env/czf_env/breakthrough/: tests.cc
tests/env/czf_env/gomuku/: test.cc
tests/env/czf_env/surakarta/: test.cc
tests/env/czf_env/surakarta_split_action/: test.cc
tests/env/czf_env/tic_tac_toe/: test.cc
